test/ui/test/packages/unsupported-dependency-providers/package.stderr
error: the dependency provider ‘git’ is not supported yet
   ┌─ ${TEST_FOLDER}/packages/unsupported-dependency-providers/package.recnot:11:34
   │
11 │             thing0: { provider: "git" },
   │                                  ═══

error: the dependency provider ‘registry’ is not supported yet
   ┌─ ${TEST_FOLDER}/packages/unsupported-dependency-providers/package.recnot:12:33
   │
12 │             thing1: { provider: registry },
   │                                 ════════

error: aborting due to 2 previous errors

